<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_smoke">

        <ImageView
            android:id="@+id/location_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="11dp"
            android:contentDescription="@string/location_imageview"
            android:src="@drawable/ic_location_24"
            app:layout_constraintEnd_toStartOf="@id/location_textview"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/location_textview"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/zihuatanejo_gro"
            android:textColor="@color/dark_blue"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/more_locations_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/more_locations_imageview"
            android:src="@drawable/ic_more_24"
            app:layout_constraintStart_toEndOf="@id/location_textview"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/filter_imagebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="82dp"
            android:layout_marginEnd="23dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/filter_imageview"
            android:src="@drawable/ic_filter_24"
            app:layout_constraintStart_toEndOf="@id/location_textview"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@android:color/transparent"/>

        <TextView
            android:id="@+id/select_category_textview"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="18dp"
            android:text="@string/select_category"
            android:textColor="@color/dark_blue"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_textview" />

        <TextView
            android:id="@+id/view_all_textview"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="33dp"
            android:text="@string/view_all"
            android:textColor="@color/orange"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_textview" />

        <HorizontalScrollView
            android:id="@+id/categories_horizontal_scrollview"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/categories"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/select_category_textview">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checkedButton="@id/phones_radiobutton"
                android:fadeScrollbars="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:overScrollMode="never"
                android:scrollIndicators="none"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                android:scrollbars="none">

                <RadioButton
                    android:id="@+id/phones_radiobutton"
                    android:layout_width="71dp"
                    android:layout_height="93dp"
                    android:layout_marginStart="23dp"
                    android:button="@null"
                    android:drawableTop="@drawable/phone_layer"
                    android:text="@string/phones"
                    android:textAlignment="center"
                    android:textColor="@color/color_text_selector" />

                <RadioButton
                    android:id="@+id/computer_radiobutton"
                    android:layout_width="71dp"
                    android:layout_height="93dp"
                    android:layout_marginStart="20dp"
                    android:button="@null"
                    android:drawableTop="@drawable/computer_layer"
                    android:text="@string/computer"
                    android:textAlignment="center"
                    android:textColor="@color/color_text_selector" />

                <RadioButton
                    android:id="@+id/health_radiobutton"
                    android:layout_width="71dp"
                    android:layout_height="93dp"
                    android:layout_marginStart="20dp"
                    android:button="@null"
                    android:drawableTop="@drawable/health_layer"
                    android:text="@string/health"
                    android:textAlignment="center"
                    android:textColor="@color/color_text_selector" />

                <RadioButton
                    android:id="@+id/books_radiobutton"
                    android:layout_width="71dp"
                    android:layout_height="93dp"
                    android:layout_marginStart="20dp"
                    android:button="@null"
                    android:drawableTop="@drawable/book_layer"
                    android:text="@string/books"
                    android:textAlignment="center"
                    android:textColor="@color/color_text_selector" />

                <RadioButton
                    android:id="@+id/extra_radiobutton"
                    android:layout_width="71dp"
                    android:layout_height="93dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="23dp"
                    android:button="@null"
                    android:drawableTop="@drawable/extra_layer"
                    android:text="@string/extra"
                    android:textAlignment="center"
                    android:textColor="@color/color_text_selector" />

            </RadioGroup>

        </HorizontalScrollView>

        <View
            android:id="@+id/searchbar_background_view"
            android:layout_width="300dp"
            android:layout_height="34dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/rectangle_search_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categories_horizontal_scrollview" />

        <ImageView
            android:id="@+id/searchbar_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/search_bar_icon"
            android:src="@drawable/ic_search_24"
            app:layout_constraintStart_toStartOf="@id/searchbar_background_view"
            app:layout_constraintTop_toTopOf="@id/searchbar_background_view" />

        <TextView
            android:id="@+id/searchber_textview"
            style="@style/TextViewStyle"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/search"
            android:textColor="@color/dark_blue_middle_opacity"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/searchbar_background_view"
            app:layout_constraintTop_toTopOf="@id/searchbar_background_view" />

        <ImageView
            android:id="@+id/qr_code_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/qr_code_imageview"
            android:src="@drawable/qr_code_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toEndOf="@id/searchbar_background_view"
            app:layout_constraintTop_toTopOf="@+id/searchbar_background_view" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchbar_background_view"
            app:layout_constraintBottom_toTopOf="@id/bottom_navigation_bar"
            android:requiresFadingEdge="vertical"
            android:fadingEdgeLength="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hot_sales_textview"
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:text="@string/hot_sales"
                    android:textColor="@color/dark_blue"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/see_more_hot_sales_textview"
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="33dp"
                    android:layout_marginTop="7dp"
                    android:text="@string/see_more"
                    android:textColor="@color/orange"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/hot_sales_recyclerview"
                    android:layout_width="wrap_content"
                    android:layout_height="221dp"
                    android:scrollbars="none"
                    android:overScrollMode="never"
                    android:orientation="horizontal"
                    android:paddingVertical="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/hot_sales_textview"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_hot_sales"/>

                <TextView
                    android:id="@+id/best_seller_textview"
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/best_seller"
                    android:textColor="@color/dark_blue"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/hot_sales_recyclerview" />

                <TextView
                    android:id="@+id/see_more_best_seller_textview"
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="33dp"
                    android:text="@string/see_more"
                    android:textColor="@color/orange"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/hot_sales_recyclerview" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/best_seller_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none"
                    android:overScrollMode="never"
                    app:layout_constraintTop_toBottomOf="@id/best_seller_textview"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:listitem="@layout/item_best_seller" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.ismaeldivita.chipnavigation.ChipNavigationBar
            android:id="@+id/bottom_navigation_bar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/nav_background_curved"
            app:cnb_menuResource="@menu/bottom_menu"
            app:cnb_unselectedColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>