<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/device_image"
                android:layout_width="187dp"
                android:layout_height="168dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/device_example"
                android:contentDescription="@string/device_image" />

            <CheckBox
                android:id="@+id/favourite_button"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/favourite_layer"
                android:button="@null"
                android:buttonTint="@android:color/transparent"/>

            <TextView
                android:id="@+id/device_discount_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/device_image"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="2dp"
                android:layout_marginStart="21dp"
                android:textColor="@color/dark_blue"
                android:textStyle="bold"
                style="@style/TextViewStyle"
                android:textSize="16sp"
                android:text="@string/device_discount_price_example"/>

            <TextView
                android:id="@+id/device_actual_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/device_image"
                app:layout_constraintStart_toEndOf="@id/device_discount_price"
                android:layout_marginTop="8dp"
                android:layout_marginStart="7dp"
                android:textColor="@color/gray_80"
                android:textStyle="bold"
                style="@style/TextViewStyle"
                android:textSize="11sp"
                android:text="@string/device_actual_price_example"/>

            <TextView
                android:id="@+id/device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/device_discount_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="5dp"
                android:layout_marginStart="21dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/dark_blue"
                style="@style/TextViewStyle"
                android:textSize="11sp"
                android:text="@string/device_name_example"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>
